Prevent scrollbar from moving content

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -8,12 +8,18 @@ body {
   background: linear-gradient(180deg, #568d7e 0%, #56818e 100%) !important;
 }
 
+// Prevent scrollbar from moving content
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
+
 // Background is separate element to allow for multiple layered blurs
 body::after {
   content: ' ';
   position: absolute;
   left: 0;
-  right: 0;
+  right: calc(-1 * (100vw - 100%)); // Prevent scrollbar moving background
   top: 0;
   bottom: 0;
   z-index: -1000;
